[package]
name = "viac_pdf_import"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pdf = "0.7.2"
pdf = { git = "https://github.com/pdf-rs/pdf.git", features=["euclid"] }
#pdf = { path = "/Users/htd/projects/rust-pr/pdf/pdf" }
pdf_encoding = { git = "https://github.com/pdf-rs/encoding" }
euclid = "0.22.7"
chrono = "0.4.24"
rust_decimal = "1.29.0"
walkdir = "2.3.2"
csv = "1.2.1"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.1.13", features = ["derive"] }
